fixing the spacing

--- a/src/assets/styles/ai-assistant.scss
+++ b/src/assets/styles/ai-assistant.scss
@@ -374,7 +374,7 @@ textarea {
         flex-grow: 1;
         overflow-y: auto;
         margin-bottom: 15px;
-        height: 90%;
+        height: 87%;
 
         @include mobile {
             margin-top: 35px;
